2002-04-12  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am (EXTRA_DIST):
	* fvwm_make_browse_menu.sh:
	* fvwm_make_directory_menu.sh:
	moved from bin to utils again, may be installed into docdir later

2002-11-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* Makefile.am (EXTRA_DIST):
	distribute the build scripts

	* fvwm_make_browse_menu.sh:
	* fvwm_make_directory_menu.sh:
	moved from utils to bin

2002-09-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure_dev.sh:
	added autoheader

2002-08-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* xselection.c:
	let config.h include strinh.h or strings.h

2002-04-12  Mikhael Goikhman  <migo@homemail.com>

	* *:
	split utils/ directory into 2 directories:
	bin/ - for programs installed into ${bindir}
	utils/ - mainly for developer utilities

The entries prior to 12-Apr-2002 may be found in ../bin/ChangeLog.