@@ -1,3 +1,7 @@
+2003-04-15  Dan Espen  <dane@mk.telcordia.com>
+
+	* configure_dev.sh: Nice streamlining from Cameron Simpson.
+
 2002-04-12  Mikhael Goikhman  <migo@homemail.com>
 
 	* Makefile.am (EXTRA_DIST):
